# iQuailFileServer

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  CmdGetFile.cpp  CmdGetFile.hpp  CmdLs.cpp  CmdLs.hpp  CmdNbrFiles.cpp  CmdNbrFiles.hpp  CmdVersion.cpp  CmdVersion.hpp  CommandManager.cpp  CommandManager.hpp  main.cpp
src/common/: ACommandManager.cpp  ACommandManager.hpp  CMakeLists.txt  Command.hpp  FileManager.cpp  FileManager.hpp  Network.cpp  Network.hpp  Protocol.cpp  Protocol.h  Protocol.hpp
src/idiff/: CMakeLists.txt  TODO
src/idiff/include/: bucket.h  helpers.h  libidiff.h
src/idiff/src/: bucket.c  bucket.h  decompress.py  helpers.c  helpers.h  xdiff.c
src/idiff/tests/: main.c  out1-2.tar  out1-2post  out1-2post.tar  out2-1  test.py  void1  void2
src/server/: CMakeLists.txt  CmdEcho.cpp  CmdEcho.hpp  CmdEchoBin.cpp  CmdEchoBin.hpp  CmdGetFile.cpp  CmdGetFile.hpp  CmdLs.cpp  CmdLs.hpp  CmdNbrFiles.cpp  CmdNbrFiles.hpp  CmdVersion.cpp  CmdVersion.hpp  CommandManager.cpp  CommandManager.hpp  PatchManager.cpp  PatchManager.hpp  SCommand.hpp  SFileManager.cpp  SFileManager.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  main.cpp
src/xdiff/: bucket.c  bucket.h  helpers.c  xdiff.c
src/xdiff/tests/: out1-2  out2-1.tar  out2-1post  out2-1post.tar  test1.tar  test2.tar
test_client/: CMakeLists.txt  main.cpp
wrapper/: main.py  walk.py  wrapper.py
xdiff/: README  crc32.c  helpers.h
xdiff/tests/: test1  test2
